# cv-writer-mcp

./: .gitignore  .mcpbignore  CLAUDE.md  FORMATTING_AGENT_IMPROVEMENTS.md  Makefile  README.dev.md  README.md  env.example  manifest.json  mcp.json  pyproject.toml  requirements.txt  test_computer_use.py  test_page_capture_agent.py
.claude/: settings.local.json
.github/workflows/: release.yml
.serena/: project.yml
context/latex/: moderncv_template.tex  moderncv_userguide.txt  personal_info.txt
examples/: README.md
input/: input_cv_test.md  schwab_cv_tailoring.md
src/cv_writer_mcp/: __init__.py  __main__.py  compiler_agent.py  cv_converter.py  error_fixing_agent.yaml  fixing_agent.py  fixing_agent.yaml  formatting_agent.py  latex_compiler.py  latex_expert.py  latex_fix_agent.py  latex_fix_agent.yaml  logger.py  main.py  md2latex_agent.py  md2latex_agent.yaml  models.py  page_capture_agent.py  page_capture_agent.yaml  pdf_computer.py  pdf_style_coordinator.py  tools.py  utils.py
src/cv_writer_mcp/compilation/: __init__.py  compiler_agent.py  error_agent.py  latex_expert.py  models.py  tools.py
src/cv_writer_mcp/compilation/configs/: compiler_agent.yaml  error_agent.yaml
src/cv_writer_mcp/conversion/: __init__.py  md2latex_agent.py  models.py
src/cv_writer_mcp/conversion/configs/: md2latex_agent.yaml
src/cv_writer_mcp/orchestration/: __init__.py  models.py  pipeline_orchestrator.py
src/cv_writer_mcp/style/: __init__.py  formatting_agent.py  models.py  page_capture_agent.py  pdf_computer.py  pdf_style_coordinator.py  quality_agent.py  tools.py  visual_critic_agent.py
src/cv_writer_mcp/style/configs/: formatting_agent.yaml  quality_agent.yaml  visual_critic_agent.yaml
tests/: __init__.py  test_cli_commands.py  test_cv_converter.py  test_latex_compiler.py  test_latex_expert.py  test_main_common_functions.py  test_md2latex_converter.py  test_models.py
