[project]
name = "cv-writer-mcp"
version = "0.0.1"
description = "MCP server for converting markdown CV content to LaTeX and compiling to PDF"
authors = [
    {name = "Francisco Perez-Sorrosal", email = "fperezsorrosal@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "loguru>=0.7.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.109.0",
    "pyyaml>=6.0.0",
    "playwright>=1.55.0,<2",
    "pypdf>=4.0.0", 
    "openai-agents>=0.3.3,<0.4", 
    "fastmcp>=2.12.4,<3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
ruff = "*"
black = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
playwright = ">=1.55.1,<2"

[tool.pixi.pypi-dependencies]
cv-writer-mcp = { path = ".", editable = true }

# ============================================================================
# PIXI TASKS - CV Writer MCP Command Reference
# ============================================================================
#
# QUICK START:
# ------------
# 1. Fast CV generation:        pixi run generate-cv-fast
# 2. Quality CV generation:     pixi run generate-cv-quality
# 3. Best quality (iterative):  pixi run generate-cv-iterative
#
# DEVELOPMENT:
# ------------
# - Run all checks:             pixi run ci
# - Format code:                pixi run format
# - Run tests:                  pixi run test
# - Start MCP server:           pixi run serve
#
# ============================================================================

[tool.pixi.tasks]
install = "pip install -e ."

# Development commands
dev = "python -m cv_writer_mcp start --dev"
test = "pytest tests/ -v"
test-cov = "pytest --cov=src --cov-report=html tests/"
lint = "ruff check src/ tests/"
lint-fix = "ruff check --fix src/ tests/"
format = "black src/ tests/"
type-check = "mypy src/"
ci = { depends-on = ["format", "lint", "type-check", "test"] }

# MCP main commands
serve = "python -m cv_writer_mcp start-mcps"

# ============================================================================
# PRIMARY END-TO-END WORKFLOWS (Complete CV Generation Pipelines)
# ============================================================================

# Fast Mode (DEFAULT): 1 variant, 1 iteration, no judge - Fast & Cheap (~3-4 LLM calls)
generate-cv-fast = "python -m cv_writer_mcp generate-cv-from-markdown input/schwab_cv_tailoring.md --output schwab_cv_final.pdf --debug"

# Quality Mode: 2 variants, judge picks best - Better Quality (~6-8 LLM calls)
generate-cv-quality = "python -m cv_writer_mcp generate-cv-from-markdown input/schwab_cv_tailoring.md --output schwab_cv_quality.pdf --variants 2 --debug"

# Iterative Mode: 3 iterations, 2 variants per iteration - Best Quality (~15-25 LLM calls)
generate-cv-iterative = "python -m cv_writer_mcp generate-cv-from-markdown input/schwab_cv_tailoring.md --output schwab_cv_iterative.pdf --max-style-iter 3 --variants 2 --debug"

# Compile + Improve: Take existing LaTeX, compile and improve style
compile-and-improve = "python -m cv_writer_mcp compile-and-improve-style output/my_cv_schwab.tex --output schwab_improved.pdf --variants 2 --debug"

# ============================================================================
# PARTIAL WORKFLOWS (Individual Phases - For Testing/Debugging)
# ============================================================================

# Check LaTeX installation
check-latex = "python -m cv_writer_mcp check-latex"

# Phase 1: Markdown → LaTeX only
convert-markdown = "python -m cv_writer_mcp convert-markdown --debug input/schwab_cv_tailoring.md --output my_cv_schwab.tex --template moderncv_template.tex"

# Phase 2: LaTeX → PDF only (with compile-fix-compile loop)
compile-latex = "python -m cv_writer_mcp compile-latex --debug output/my_cv_schwab.tex --output my_cv_schwab.pdf"

# Phase 3: PDF → Styled LaTeX only (analyze and improve styling)
fix-style = "python -m cv_writer_mcp fix-style -p output/to_improve_schwab.pdf -t output/to_improve_schwab.tex -o to_improve_schwab_fixed.tex --debug"

# ============================================================================
# MCPB BUNDLE CREATION (For Distribution)
# ============================================================================

# Build Python wheel using uv
python-bundle = "mkdir -p python-dist && uv build --wheel --out-dir python-dist && echo 'Wheel built and ready for MCPB bundle'"

# Export dependencies for bundle using uv
update-mcpb-deps = "rm -rf uv.lock && uv sync && uv lock && uv export --no-hashes --format requirements-txt > requirements.txt"

# Install dependencies to lib/ directory using uv~~
mcp-bundle = """
rm -rf lib &&
mkdir -p lib &&
uv pip install --target lib -r requirements.txt
"""

# Create .mcpb bundle file
pack="""BUNDLE_NAME=$(python3 -c \"import json; print(f\\\"{json.load(open('manifest.json'))['name']}-{json.load(open('manifest.json'))['version']}.mcpb\\\")\") && 
npx @anthropic-ai/mcpb pack . mcpb-package/$BUNDLE_NAME &&
echo 'Bundle created: cv-writer-mcp.mcpb'
"""

# Clean bundle artifacts
clean-bundles = """
rm -rf ilb/ python-dist/ mcpb-package/ &&
echo 'Bundle artifacts cleaned'
"""


[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "mcp.*",
    "markdown.*",
    "jinja2.*",
    "pylatex.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install build && python -m build"
upload_to_vcs_release = true
upload_to_pypi = false
upload_to_release = true
commit_subject = "chore(release): {version} [skip ci]"
commit_message = "chore(release): {version} [skip ci]\n\nAutomatically generated by python-semantic-release"
tag_commit = true
major_on_zero = true
